navbar truncates fixed

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -78,30 +78,7 @@ ul {
   }
 }
 
-/* handle overflowing nav items */
-@media only screen and (max-width: 1335px) and (min-width: 993px) {
-  /* expo */
-  .truncate-expo {
-    visibility: hidden;
-  }
-  .expo-nav-ka-dropdown-icon {
-    display: none;
-  }
-  .truncate-expo::before {
-    content: "Expos...";
-    visibility: visible;
-    display: block;
-  }
-  /* get-involved */
-  .truncate-get-involved {
-    visibility: hidden;
-  }
-  .truncate-get-involved::before {
-    content: "Get...";
-    visibility: visible;
-    display: block;
-  }
-}
+
 
 /* navbar drop down animation 
   credits: https://bootstrap-menu.com/detail-hover-animation.html */
